Add modified squaring kv file to repo

--- a/prac_8/squaring.kv
+++ b/prac_8/squaring.kv
@@ -14,7 +14,7 @@ BoxLayout:
         Label:
             id: output_label
             font_size: 48
-            color: 	(255,100,255)
+            color: 	(0, 1, 1, 1)
     BoxLayout:
         orientation: 'vertical'
         Label:
