Add final files to prac repo

--- a/prac_8/squaring.kv
+++ b/prac_8/squaring.kv
@@ -14,7 +14,8 @@ BoxLayout:
         Label:
             id: output_label
             font_size: 48
-            color: 	(0, 1, 1, 1)
+            # the following line dictates the colour of pink
+            color: 	(1, 0, 1, 0.8)
     BoxLayout:
         orientation: 'vertical'
         Label:
